# autononymous.github.io

./: FBC NES.tif  FirebrandViewer.html  FirebrandViewerold.html  Jason_main.html  Ryan_main.html  Scriv2Web.html  Text-Entry-Template.html  Writer 2.html  Writer2.html  blog-divmeter1.html  gods bathroom.html  index.css  index.html  rkiss-board-1.html  rkiss-tfbc-1.html
FullReader/: config.json  index.html  init.js  script.js  styles.css  test.txt
Jason/: Neckbeard_Adventure_0.1.0.html  Writer2.css  Writer2.html
PACT/: CMakeLists.txt  main.cpp
PACT/gui/: main.py  main_window.py  proto.py  timer.py
PACT/gui/widgets/: camera.py  screen.py
ProjectMu/: mu.css
Ryan/: Writer1.css  Writer1.html  tfbc.css  tfbc.html
STOLLE_PACT/: config.json  pact_camera.py  pact_config.py  pact_debug.py  pact_main.py  pact_main2.py  pact_mastermind.py  pact_maths.py  pact_ui.py  profile.json
Scriv2WN/: Announcements.json  Meta_Paragate.xlsx  NarrativeKinematics.py  Scriv2HTML.py  Scriv2WebNovel.py  StoryConfig.json  build_pdfs.py  index.html  main.js  main.ts  main_old.ts  novel_gpt_exports.py  pdftest.py  print.css  redliner.py  tsconfig.json
ScrivReader/: MainPage.html  SPP.bat  ScrivPostProcess.py  StoryConfig.json  initialize.js  main.js  mainstyles.css  mp_script.js  mp_styles.css  scrivreader.html  storystyles.css
ScrivWeb/: main.js  main.ts  print.css  tsconfig.json
ScrivenerReader/: ScrivWeb_CompilePush.bat  config.json  init.js  main.js  scrivreader.html
TaskList/: styles.css  tasklist.html
TaskManager/: blackbook.html  style.css  task.js
css/: poems.css
(+1896 files in other folders)
